--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,44 @@
-<!DOCTYPE html><html lang="en">	<head>		<meta charset="UTF-8">		<meta http-equiv="X-UA-Compatible" content="IE=edge">		<meta name="viewport" content="width=device-width, initial-scale=1.0">		<title>Stringle - Dashboard</title>		<link rel="stylesheet" href="/styles.css">		<script src="/script.js" defer></script><link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-<link rel="manifest" href="/icons/site.webmanifest">
-<link rel="shortcut icon" href="/icons/favicon.ico">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/icons/browserconfig.xml">
-<meta name="theme-color" content="#ffffff"></head>	<body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Dashboard for Stringle service. For education purpose"
+		/>
+		<title>Stringle - Dashboard</title>
+		<link rel="stylesheet" href="/styles.css" />
+		<script src="/script.js" defer></script>
+		<link
+			rel="apple-touch-icon"
+			sizes="76x76"
+			href="/icons/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/icons/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/icons/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="/icons/site.webmanifest" />
+		<link rel="shortcut icon" href="/icons/favicon.ico" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="msapplication-config" content="/icons/browserconfig.xml" />
+		<meta name="theme-color" content="#ffffff" />
+	</head>
+	<body>
+		<header class="page-header"></header>
+		<main>
+			<section class="main-section"></section>
+		</main>
+		<aside class="side-panel"></aside>
+	</body>
+</html>
