--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-			name="description"
-			content="Dashboard for Stringle service. For education purpose"
-		/>
-		<title>Stringle - Dashboard</title>
-		<link rel="stylesheet" href="/styles.css" />
-		<script src="/script.js" defer></script>
-		<link
-			rel="apple-touch-icon"
-			sizes="76x76"
-			href="/icons/apple-touch-icon.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="32x32"
-			href="/icons/favicon-32x32.png"
-		/>
-		<link
-			rel="icon"
-			type="image/png"
-			sizes="16x16"
-			href="/icons/favicon-16x16.png"
-		/>
-		<link rel="manifest" href="/icons/site.webmanifest" />
-		<link rel="shortcut icon" href="/icons/favicon.ico" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-config" content="/icons/browserconfig.xml" />
-		<meta name="theme-color" content="#ffffff" />
-	</head>
-	<body>
-		<header class="page-header"></header>
-		<main>
-			<section class="main-section"></section>
-		</main>
-		<aside class="side-panel"></aside>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Dashboard for Stringle service. For education purpose"
+        />
+        <title>Stringle - Dashboard</title>
+        <link rel="stylesheet" href="/styles.css" />
+        <script src="/script.js" defer></script>
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="/icons/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/icons/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/icons/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/icons/site.webmanifest" />
+        <link rel="shortcut icon" href="/icons/favicon.ico" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="msapplication-config" content="/icons/browserconfig.xml" />
+        <meta name="theme-color" content="#ffffff" />
+    </head>
+    <body>
+        <div class="container">
+            <header class="header">
+                <a href="/" class="header__logo"
+                    ><img
+                        src="/images/header-logo.webp"
+                        alt="Stringle circle logo"
+                        class="header__logo-image"
+                    />
+                    Stringle</a
+                >
+                <nav class="header__navigation">
+                    <ul class="header__menu">
+                        <li class="header__menu-item header__menu-item--active">
+                            <a href="/" class="header__menu-link">
+                                <svg class="header__menu-icon">
+                                    <use href="/icons/icon-sprite.svg#home" />
+                                </svg>
+                                Dashboard
+                            </a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a href="/" class="header__menu-link">
+                                <svg class="header__menu-icon">
+                                    <use href="/icons/icon-sprite.svg#folder" />
+                                </svg>
+                                Classes
+                            </a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a href="/" class="header__menu-link">
+                                <svg class="header__menu-icon">
+                                    <use href="/icons/icon-sprite.svg#book" />
+                                </svg>
+                                Resources
+                            </a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a href="/" class="header__menu-link">
+                                <svg class="header__menu-icon">
+                                    <use
+                                        href="/icons/icon-sprite.svg#calendar"
+                                    />
+                                </svg>
+                                Learning Plan
+                            </a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a href="/" class="header__menu-link">
+                                <svg class="header__menu-icon">
+                                    <use href="/icons/icon-sprite.svg#chat" />
+                                </svg>
+                                Chat
+                            </a>
+                        </li>
+                        <li class="header__menu-item">
+                            <a href="/" class="header__menu-link">
+                                <svg class="header__menu-icon">
+                                    <use
+                                        href="/icons/icon-sprite.svg#settings"
+                                    />
+                                </svg>
+                                Settings
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__offer">
+                    <img
+                        src="/images/header-upgrade.webp"
+                        alt="Rocket from box"
+                        class="header__offer-image"
+                    />
+                    <div class="header__offer-text">
+                        Upgrade to
+                        <span class="header__offer-strong">PRO</span> for more
+                        resources
+                    </div>
+                    <a href="/" class="header__offer-link button">Upgrade</a>
+                </div>
+            </header>
+            <main>
+                <section class="main-section"></section>
+            </main>
+            <aside class="side-panel"></aside>
+        </div>
+    </body>
 </html>
