header links, button hover & focus styles

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,13 @@
                 >
                 <nav class="header__navigation">
                     <ul class="header__menu">
-                        <li class="header__menu-item header__menu-item--active">
-                            <a href="/" class="header__menu-link">
+                        <li class="header__menu-item">
+                            <a
+                                href="/"
+                                class="
+                                    header__menu-link header__menu-link--active
+                                "
+                            >
                                 <svg class="header__menu-icon">
                                     <use href="/icons/icon-sprite.svg#home" />
                                 </svg>
