--- a/src/index.html
+++ b/src/index.html
@@ -648,7 +648,10 @@
                 </button>
                 <div class="personal__logout">
                     Logout
-                    <button class="personal__logout-button icon-button">
+                    <button
+                        class="personal__logout-button icon-button"
+                        aria-label="Logout button"
+                    >
                         <svg class="icon-button__icon">
                             <use href="/icons/icon-sprite.svg#sign-out" />
                         </svg>
@@ -663,7 +666,10 @@
                                 class="personal__avatar-image"
                             />
                         </div>
-                        <button class="personal__avatar-button">
+                        <button
+                            class="personal__avatar-button"
+                            aria-label="Add avatar button"
+                        >
                             <svg class="personal__avatar-icon">
                                 <use href="/icons/icon-sprite.svg#plus" />
                             </svg>
@@ -695,7 +701,10 @@
                 <div class="personal__reminders">
                     <div class="personal__reminders-header">
                         <h2 class="personal__reminders-heading">Reminders</h2>
-                        <button class="personal__reminders-button icon-button">
+                        <button
+                            class="personal__reminders-button icon-button"
+                            aria-label="Reminders button"
+                        >
                             <svg
                                 class="icon-button__icon"
                                 viewbox="0 0 22 26"
