badge, personal progress grid fix

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,7 @@
                         </li>
                         <li class="header__menu-item">
                             <a href="/" class="header__menu-link">
+                                <div class="header__menu-badge badge">4</div>
                                 <svg class="header__menu-icon">
                                     <use href="/icons/icon-sprite.svg#chat" />
                                 </svg>
