change avatar input & script

--- a/src/index.html
+++ b/src/index.html
@@ -650,10 +650,17 @@
                                 src="/images/avatar.webp"
                                 alt="User photo"
                                 class="personal__avatar-image"
+                                id="avatar-image"
                             />
                         </div>
+                        <input
+                            type="file"
+                            id="avatar-file"
+                            style="display: none"
+                        />
                         <button
                             class="personal__avatar-button"
+                            id="avatar-change"
                             aria-label="Add avatar button"
                         >
                             <svg class="personal__avatar-icon">
