dropdown appearance safari fix

--- a/src/index.html
+++ b/src/index.html
@@ -283,10 +283,7 @@
                                 <h2 class="main__subtitle">
                                     Time Spent on Learning
                                 </h2>
-                                <div
-                                    class="main__dropdown dropdown"
-                                    tabindex="0"
-                                >
+                                <div class="main__dropdown dropdown">
                                     <div class="dropdown__header">
                                         <span class="dropdown__title"
                                             >Last week</span
@@ -303,14 +300,13 @@
                                                 dropdown__item
                                                 dropdown__item--active
                                             "
-                                            tabindex="0"
                                         >
                                             Last week
                                         </li>
-                                        <li class="dropdown__item" tabindex="0">
+                                        <li class="dropdown__item">
                                             Last month
                                         </li>
-                                        <li class="dropdown__item" tabindex="0">
+                                        <li class="dropdown__item">
                                             Last year
                                         </li>
                                     </ul>
