--- a/src/index.html
+++ b/src/index.html
@@ -283,7 +283,10 @@
                                 <h2 class="main__subtitle">
                                     Time Spent on Learning
                                 </h2>
-                                <div class="main__dropdown dropdown">
+                                <div
+                                    class="main__dropdown dropdown"
+                                    tabindex="0"
+                                >
                                     <div class="dropdown__header">
                                         <span class="dropdown__title"
                                             >Last week</span
@@ -300,13 +303,14 @@
                                                 dropdown__item
                                                 dropdown__item--active
                                             "
+                                            tabindex="0"
                                         >
                                             Last week
                                         </li>
-                                        <li class="dropdown__item">
+                                        <li class="dropdown__item" tabindex="0">
                                             Last month
                                         </li>
-                                        <li class="dropdown__item">
+                                        <li class="dropdown__item" tabindex="0">
                                             Last year
                                         </li>
                                     </ul>
